<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">321ProjectPrototype</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_record">Record</string>
    <string name="menu_record_processing">Record</string>
    <string name="menu_PastRecordings">Past Recordings</string>
    <string name="menu_PastRecordings_Online">Past Recordings Online</string>
    <string name="menu_Discover">Discover</string>
    <string name="menu_Forum">Forum</string>
    <string name="menu_Flocks">Flock</string>
    <string name="menu_Flocks_Info">Flock Information</string>
    <string name="menu_Flocks_Create">Flock Create</string>
    <string name="menu_Flocks_LeaderBoard">Flock Leaderboard</string>
    <string name="menu_Flocks_Settings">Flock Settings</string>
    <string name="menu_Reward">Reward</string>
    <string name="menu_Settings">Settings</string>

    <string name="No_Result">No Result</string>


    <string name="Comment">Comment</string>

    <string name="timer">00:00</string>

    <string name="recordChirp">Press to Record Your Chirps</string>
    <string name="recordRequest">Permission to use recording device</string>

    <string name="DiscoverAustralianBirds">Discover Australian Birds</string>


    <string name="errorPopUp">Sorry, We Screwed Up, Please Try Again!</string>
    <string name="okay">Okay</string>



</resources>