<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBackground"
    android:id="@+id/homeFragment"
    tools:context=".ui.home.HomeFragment">

    <View
        android:id="@+id/viewHomePage"
        android:layout_width="375dp"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton1"
        android:layout_width="311dp"
        android:layout_height="96dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/et_style"
        android:text="@string/menu_record"
        app:backgroundTint="@null"
        app:icon="@drawable/microphone"
        app:iconSize="40dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHomePage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton2"
        android:layout_width="311dp"
        android:layout_height="96dp"
        android:layout_marginTop="52dp"
        android:text="@string/menu_Discover"
        android:background="@drawable/et_style"
        app:backgroundTint="@null"
        app:icon="@drawable/binoculars"
        app:iconSize="40dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton3"
        android:layout_width="311dp"
        android:layout_height="96dp"
        android:layout_marginTop="52dp"
        android:text="@string/menu_Reward"
        android:background="@drawable/et_style"
        app:backgroundTint="@null"
        app:icon="@drawable/trophy"
        app:iconSize="40dp"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton2" />

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="314dp"
        android:layout_height="73dp"
        android:layout_marginTop="60dp"
        android:text=""
        android:textSize="20dp"
        android:textColor="#333"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginTop="60dp"
        android:id="@+id/usernameHomepageProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>